Fixed layout of more info section - home page; social icons are bleeding out of wrapper - to be fixed;

--- a/styles/sass/_blog-page.scss
+++ b/styles/sass/_blog-page.scss
@@ -54,10 +54,17 @@
   background: $secondary-background-color;
   width: 400px;
   padding: 80px;
+  margin: 0;
+  // WTF? - what to do with the img? 
+  display: flex;
+  flex-direction: column;
+  justify-content: inherit;
+  position: relative;
+  right: -50px;
 }
 
 .sidebar-content p {
-  margin-bottom: 0;
+  margin: 0 auto;
 }
 
 .sidebar-content a {
