--- a/styles/styles.css
+++ b/styles/styles.css
@@ -779,6 +779,10 @@ header h2 {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
 }
@@ -788,30 +792,17 @@ header h2 {
   margin-top: 0;
 }
 
-.content-left {
+.content-row-1, .content-row-2 {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
   -webkit-box-flex: 1;
       -ms-flex: 1;
           flex: 1;
-}
-
-.content-right {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-flex: 1;
-      -ms-flex: 1;
-          flex: 1;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
 }
 
 /* from https://markheath.net/post/font-awesome-circle-background */
@@ -823,7 +814,9 @@ header h2 {
   text-align: center;
   line-height: 50px;
   padding: 10px;
-  margin-right: 15px;
+  position: relative;
+  top: 50px;
+  right: 80px;
 }
 
 .icon-heading {
@@ -1239,10 +1232,23 @@ input[type="email"] {
   background: #220303;
   width: 400px;
   padding: 80px;
+  margin: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: inherit;
+      -ms-flex-pack: inherit;
+          justify-content: inherit;
+  position: relative;
+  right: -50px;
 }
 
 .sidebar-content p {
-  margin-bottom: 0;
+  margin: 0 auto;
 }
 
 .sidebar-content a {
